[gd_scene load_steps=5 format=3 uid="uid://bsacs1hwtumbn"]

[ext_resource type="Script" path="res://Scenes/Rooms/BaseRoom/base_room.gd" id="1_4stnd"]
[ext_resource type="TileSet" uid="uid://cx3lf2a1uoeoy" path="res://Assets/Tileset/RoomTileSet.tres" id="2_ysbkf"]
[ext_resource type="PackedScene" uid="uid://38keyojp4i5v" path="res://Scenes/Props/door.tscn" id="3_fuao7"]
[ext_resource type="PackedScene" uid="uid://d1rpl2wsj3ukc" path="res://Scenes/Util/spawnable_area.tscn" id="4_keq5j"]

[node name="Room7" type="Node2D" node_paths=PackedStringArray("spawn_point", "spawnable_area", "doors")]
script = ExtResource("1_4stnd")
spawn_point = NodePath("SpawnPoint")
spawnable_area = NodePath("SpawnableArea")
doors = NodePath("Doors")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_ysbkf")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-786431, 2228225, 1, -720895, 2228225, 1, -655359, 2228225, 1, -1114110, 2228225, 1, -1048574, 2228225, 1, -983038, 2097153, 2, -917502, 2228225, 1, -851966, 2228225, 1, -786430, 2228225, 1, -720894, 2228225, 1, -655358, 2228225, 1, -1114109, 2228225, 1, -1048573, 2228225, 1, -983037, 2228225, 1, -917501, 2228225, 1, -851965, 2162689, 1, -786429, 2162689, 1, -720893, 2162689, 1, -655357, 2228225, 1, -524285, 2228225, 1, -1179644, 2228225, 1, -1114108, 2228225, 1, -1048572, 2228225, 1, -983036, 2228225, 1, -917500, 2228225, 1, -851964, 2228225, 1, -786428, 2228225, 1, -720892, 2228225, 1, -655356, 2097153, 2, -524284, 2228225, 1, -458748, 2228225, 1, -1179643, 2228225, 1, -1114107, 2097153, 2, -1048571, 2228225, 1, -983035, 2228225, 1, -917499, 2228225, 1, -851963, 2228225, 1, -786427, 2162689, 1, -720891, 2228225, 1, -655355, 2228225, 1, -524283, 2228225, 1, -458747, 2228225, 1, -393211, 2228225, 1, -1179642, 2228225, 1, -1114106, 2228225, 1, -1048570, 2228225, 1, -983034, 2228225, 1, -917498, 2228225, 1, -851962, 2228225, 1, -786426, 2228225, 1, -720890, 2228225, 1, -655354, 2162689, 1, -524282, 2228225, 1, -458746, 2228225, 1, -393210, 2228225, 1, -1179641, 2097153, 1, -1114105, 2228225, 1, -1048569, 2228225, 1, -983033, 2228225, 1, -917497, 2228225, 1, -851961, 2097153, 2, -786425, 2228225, 1, -720889, 2228225, 1, -655353, 2228225, 1, -524281, 2162689, 1, -458745, 2228225, 1, -393209, 2228225, 1, -327673, 2228225, 1, -1114104, 2097153, 1, -1048568, 2228225, 1, -983032, 2228225, 1, -917496, 2228225, 1, -851960, 2228225, 1, -786424, 2228225, 1, -720888, 2228225, 1, -655352, 2228225, 1, -524280, 2228225, 1, -458744, 2228225, 1, -393208, 2228225, 1, -327672, 2228225, 1, -262136, 2228225, 1, -1048567, 2228225, 1, -983031, 2228225, 1, -917495, 2228225, 1, -851959, 2228225, 1, -786423, 2228225, 1, -720887, 2228225, 1, -655351, 2228225, 1, -524279, 2228225, 1, -458743, 2228225, 1, -393207, 2228225, 1, -327671, 2097153, 2, -262135, 2228225, 1, -196599, 2228225, 1, -1048566, 2228225, 1, -983030, 2228225, 1, -917494, 2228225, 1, -851958, 2162689, 1, -786422, 2228225, 1, -720886, 2228225, 1, -655350, 2228225, 1, -524278, 2228225, 1, -458742, 2228225, 1, -393206, 2228225, 1, -327670, 2228225, 1, -262134, 2228225, 1, -196598, 2228225, 1, -131062, 2228225, 1, -1114101, 2097153, 1, -1048565, 2228225, 1, -983029, 2228225, 1, -917493, 2228225, 1, -851957, 2162689, 1, -786421, 2228225, 1, -720885, 2228225, 1, -655349, 2228225, 1, -524277, 2228225, 1, -458741, 2162689, 1, -393205, 2228225, 1, -327669, 2228225, 1, -262133, 2228225, 1, -196597, 2228225, 1, -1179636, 2097153, 1, -1114100, 2228225, 1, -1048564, 2228225, 1, -983028, 2228225, 1, -917492, 2228225, 1, -851956, 2228225, 1, -786420, 2228225, 1, -720884, 2228225, 1, -655348, 2228225, 1, -524276, 2228225, 1, -458740, 2228225, 1, -393204, 2228225, 1, -327668, 2162689, 1, -262132, 2228225, 1, -1179635, 2228225, 1, -1114099, 2228225, 1, -1048563, 2228225, 1, -983027, 2228225, 1, -917491, 2228225, 1, -851955, 2228225, 1, -786419, 2228225, 1, -720883, 2228225, 1, -655347, 2228225, 1, -524275, 2228225, 1, -458739, 2228225, 1, -393203, 2228225, 1, -327667, 2228225, 1, -1179634, 2097153, 2, -1114098, 2228225, 1, -1048562, 2228225, 1, -983026, 2228225, 1, -917490, 2228225, 1, -851954, 2228225, 1, -786418, 2228225, 1, -720882, 2162689, 1, -655346, 2228225, 1, -524274, 2228225, 1, -458738, 2228225, 1, -393202, 2228225, 1, -1179633, 2228225, 1, -1114097, 2228225, 1, -1048561, 2228225, 1, -983025, 2228225, 1, -917489, 2228225, 1, -851953, 2228225, 1, -786417, 2097153, 2, -720881, 2228225, 1, -655345, 2228225, 1, -524273, 2228225, 1, -458737, 2228225, 1, -1114096, 2228225, 1, -1048560, 2228225, 1, -983024, 2228225, 1, -917488, 2228225, 1, -851952, 2228225, 1, -786416, 2228225, 1, -720880, 2162689, 1, -655344, 2228225, 1, -1114095, 2228225, 1, -1048559, 2162689, 1, -983023, 2228225, 1, -917487, 2228225, 1, -851951, 2228225, 1, -786415, 2228225, 1, -720879, 2228225, 1, -655343, 2097153, 2, -1048558, 2228225, 1, -983022, 2228225, 1, -917486, 2228225, 1, -851950, 2228225, 1, -786414, 2228225, 1, -720878, 2228225, 1, -1245180, 2228225, 1, -1245179, 2228225, 1, -1245178, 2228225, 1, -1245171, 2228225, 1, -1245170, 2228225, 1, -1245169, 2228225, 1, -524272, 2228225, 1, -655342, 2228225, 1, -327674, 2228225, 1, -262137, 2228225, 1, -196600, 2228225, 1, -131063, 2228225, 1, -65527, 2228225, 1, -65526, 2228225, 1, -131061, 2097153, 1, -196596, 2097153, 1, -262131, 2097153, 1, -393201, 2228225, 1, -327666, 2228225, 1, -458736, 2228225, 1, -524271, 2097153, 1, -131064, 2097153, 1, -196601, 2097153, 1, -327675, 2228225, 1, -262138, 2097153, 1, -393212, 2228225, 1, -524286, 2097153, 1, -458749, 2228225, 1, -851967, 2228225, 1, -917503, 2228225, 1, -983039, 2228225, 1, -1048575, 2228225, 1, -589823, 2097153, 1, -589822, 2228225, 1, -589821, 2228225, 1, -589820, 2228225, 1, -589819, 2228225, 1, -589818, 2228225, 1, -589817, 2228225, 1, -589816, 2097153, 2, -589815, 2228225, 1, -589814, 2228225, 1, -589813, 2162689, 1, -589812, 2228225, 1, -589811, 2228225, 1, -589810, 2228225, 1, -589809, 2228225, 1, -589808, 2228225, 1, -589807, 2228225, 1, -589806, 2097153, 1, -1179645, 2228225, 1, -1179632, 2228225, 1, -1245168, 2228225, 1, -1179631, 2097153, 1, -1114094, 2097153, 1, -1048557, 2097153, 1, -983021, 2228225, 1, -917485, 2228225, 1, -851949, 2228225, 1, -786413, 2228225, 1, -720877, 2228225, 1, -655341, 2097153, 1, -655360, 2097153, 1, -720896, 2228225, 1, -786432, 2228225, 1, -851968, 2228225, 1, -917504, 2097153, 2, -983040, 2228225, 1, -1048576, 2097153, 1, -1114111, 2097153, 1, -1179646, 2097153, 1, -1245181, 2228225, 1, -1310706, 2228225, 1, -1310705, 2228225, 1, -1310715, 2228225, 1, -1310716, 2228225, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-1310707, 131073, 0, -1310704, 524289, 0, -1310714, 524289, 0, -1310717, 131073, 0, -1048576, 65537, 2, -983040, 65537, 2, -917504, 65537, 2, -851968, 65537, 2, -786432, 65537, 2, -720896, 65537, 2, -655360, 65537, 2, -1048557, 589825, 2, -983021, 589825, 2, -917485, 589825, 2, -851949, 589825, 2, -786413, 589825, 2, -720877, 589825, 2, -655341, 589825, 2, -1114103, 327681, 0, -1114102, 327681, 0, -65527, 327681, 0, -65526, 327681, 0, -131061, 524289, 9, -65525, 524289, 10, -196596, 524289, 9, -131060, 524289, 10, -262131, 524289, 9, -196595, 524289, 10, -327666, 524289, 9, -262130, 524289, 10, -393201, 524289, 9, -327665, 524289, 10, -458736, 524289, 9, -393200, 524289, 10, -524271, 524289, 9, -458735, 524289, 10, -589806, 524289, 9, -524270, 524289, 10, -131064, 131073, 9, -65528, 131073, 10, -196601, 131073, 9, -131065, 131073, 10, -262138, 131073, 9, -196602, 131073, 10, -327675, 131073, 9, -262139, 131073, 10, -393212, 131073, 9, -327676, 131073, 10, -458749, 131073, 9, -393213, 131073, 10, -524286, 131073, 9, -458750, 131073, 10, -589823, 131073, 9, -524287, 131073, 10, -589824, 131073, 10, -589805, 524289, 10, -1114112, 65537, 1, -1114111, 131073, 1, -1179647, 65537, 1, -1179646, 131073, 1, -1245182, 65537, 1, -1245181, 131073, 1, -1179637, 65537, 1, -1179636, 131073, 1, -1245172, 65537, 1, -1245171, 131073, 1, -1114094, 524289, 1, -1114093, 589825, 1, -1179631, 524289, 1, -1179630, 589825, 1, -1245168, 524289, 1, -1245167, 589825, 1, -1179641, 524289, 1, -1179640, 589825, 1, -1245178, 524289, 1, -1245177, 589825, 1, -1114104, 524289, 1, -1114101, 131073, 1)
layer_2/name = "Props"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-65527, 3, 13, -65526, 65539, 13, -1310705, 0, 0, -1310706, 0, 0, -1310715, 0, 0, -1310716, 0, 0)
layer_3/name = "Props Higher"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource("3_fuao7")]
position = Vector2(160, -624)

[node name="Door2" parent="Doors" instance=ExtResource("3_fuao7")]
position = Vector2(480, -624)

[node name="SpawnableArea" parent="." instance=ExtResource("4_keq5j")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpawnableArea"]
polygon = PackedVector2Array(13, -504, 14, -298, 39, -298, 234, -98, 257, -71, 321, -82, 385, -69, 407, -98, 600, -293, 626, -292, 627, -503, 595, -506, 532, -573, 431, -573, 363, -502, 274, -501, 211, -572, 111, -571, 45, -507)

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(320, -45)
